# flycockpitapp

./: .dockerignore  .env.docker.defaults  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.relay  Dockerfile.worker  LICENSE  NOTICE  README.md  SECURITY.md  biome.json  docker-compose.agent.yml  docker-compose.dev.yml  docker-compose.selfhost.yml  doctor.config.json  knip.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portless.json  render.yaml  sitemap.md  tsconfig.json  turbo.json
apps/cli/: Cargo.toml  LICENSE  README.md  dist-workspace.toml
apps/cli/docs/: providers.md  redaction-scrub-sites.md
apps/cli/examples/: generate-manpages.rs
apps/cli/scripts/: generate-release-assets.sh  install-shell-assets.sh  patch-dist-assets.py
apps/cli/src/: auto_title.rs  banner.rs  browser.rs  cli.rs  computer.rs  credentials.rs  diagnostics.rs  embeddings.rs  env_snapshot.rs  envref.rs  gitignore.rs  lib.rs  main.rs  model_system_prompt.rs  private_fs.rs  process.rs  secret_ref.rs  startup.rs  terminal_host.rs  test_env.rs  text.rs  tokens.rs  user_agent.rs  welcome.rs
apps/cli/src/agents/: builtin_defs.rs  mod.rs  tests.rs
apps/cli/src/approval/: command.rs  mod.rs  paths.rs  policy.rs  prompt.rs  store.rs
apps/cli/src/assistants/: identity.rs  mod.rs  self_improvement.rs
apps/cli/src/auth/: codex_oauth.rs  flycockpit.rs  mod.rs  refresh_guard.rs  xai_oauth.rs
apps/cli/src/clipboard/: mod.rs
apps/cli/src/commands/: agent.rs  ask.rs  assistant.rs  bash_hints.rs  config.rs  connect.rs  daemon.rs  debug.rs  doctor.rs  export.rs  fetch_models.rs  flycockpit.rs  import.rs  init.rs  jq.rs  kcl.rs  learn.rs  mcp.rs  meta.rs  mod.rs  models.rs  packages.rs  providers.rs  run.rs  schedule.rs  session.rs  setup.rs  skill.rs  stats.rs  sync.rs  trust.rs  tui.rs
apps/cli/src/config/: dirs.rs  extended.rs  merge.rs  mod.rs  model_defaults.rs  model_policy.rs  provider.rs  providers.rs  resolve.rs  trust.rs
apps/cli/src/container/: mod.rs
apps/cli/src/daemon/: caffeinate.rs  client.rs  connector.rs  fs_api.rs  image_upload.rs  lsp.rs  mod.rs  org_sync.rs  principal.rs  proto.rs  registry.rs  relay_envelope.rs  remote_audit_upload.rs  server.rs  session_worker.rs  terminal_host.rs  test_harness.rs
apps/cli/src/db/: compressed_results.rs  connector.rs  guidance.rs  inference_calls.rs  locks.rs  mod.rs  needs_attention.rs  org_sync.rs  packages.rs  paused_work.rs  pins.rs  principals.rs  project_notes.rs  prune_ledger.rs  remote_audit_upload.rs  retention.rs  seed_tools.rs  session_goals.rs  session_log.rs  session_plan_docs.rs  session_search.rs  sessions.rs  skill_pairs.rs  sql.rs  stats.rs  subagent_handles.rs  tandem.rs  task_delegation_payloads.rs  task_delegations.rs  task_todos.rs  tokenizer_calibration.rs  tool_calls.rs  workspace_trust.rs
apps/cli/src/engine/: agent.rs  compact.rs  delegation_prompt_prune.rs  docs_pipeline.rs  driver.rs  injection_check.rs  interrupt.rs  message.rs  mod.rs  model.rs  model_roles.rs  predict.rs  preflight.rs  rehydrate.rs  repair.rs  resource_scheduler.rs  retry.rs  safety_gate.rs  seed_collector.rs  text_call.rs  think.rs  tool.rs  translate.rs  validation_hint.rs
apps/cli/src/git/: mod.rs
apps/cli/src/harness/: preflight.rs  run.rs  spawn.rs
apps/cli/src/intel/: callgraph.rs  lang.rs  mod.rs  resolve.rs
apps/cli/src/locks/: acquire.rs  mod.rs
apps/cli/src/mcp/: auth.rs  builtin.rs  cache.rs  catalog.rs  client.rs  config.rs  invoke_prep.rs  mod.rs  sandbox.rs
apps/cli/src/providers/: deepfetch.rs  http_retry.rs  mod.rs  models_fetch.rs  registry.rs
apps/cli/src/redact/: dotenv.rs  mod.rs  tests.rs
apps/cli/src/session/: lifecycle.rs  mod.rs  recording.rs  title.rs  toggles.rs
apps/cli/src/skills/: auto_select.rs  manage.rs  mod.rs
apps/cli/src/tools/: bash.rs  common.rs  custom.rs  custom_templates.rs  data_syntax.rs  delegation_payload_retrieve.rs  docs.rs  editunlock.rs  escalate.rs  glob.rs  goal.rs  grep.rs  handoff.rs  harness.rs  intel.rs  lsp.rs  mcp_tool.rs  mod.rs  plan_doc.rs  question.rs  read.rs  readlock.rs  rust_toolchain.rs  sandbox.rs  sandbox_mode.rs  schedule.rs  session_read.rs  session_search.rs  shell_sandbox.rs  skill.rs  skill_manage.rs  spawn.rs  task.rs  task_repair.rs  todo.rs  tool_result_retrieve.rs  unlock.rs  web.rs  writeunlock.rs
apps/cli/src/tui/: agent_runner.rs  async_action.rs  attention.rs  auth_failure.rs  banner_box.rs  chrome.rs  composer.rs  context_pane.rs  daemon_prompt.rs  diff_pane.rs  dir_suggest.rs  file_tag.rs  geometry.rs  history.rs  input_source.rs  keys_overlay.rs  links.rs  markdown.rs  message_block.rs  mod.rs  model_picker.rs  multireview_dialog.rs  nav.rs  notes_pane.rs  pane.rs  pane_shared.rs  paste.rs  permissions_pane.rs  pins_overlay.rs  quick_dialog.rs  resources_pane.rs  sessions_pane.rs  stats_pane.rs  textfield.rs  theme.rs  usage_pane.rs  vim_editor.rs
apps/cli/src/wizard/: mod.rs
apps/cli/tap/: README.md
apps/cli/tests/: binary_smoke.rs  daemon_lifecycle.rs  daemon_lifecycle_replay.rs  daemon_state_freshness.rs  multi_client_queue.rs  run_noninteractive.rs
apps/relay-rs/: Cargo.toml
apps/relay-rs/src/: main.rs
crates/cockpit-config/: Cargo.toml
crates/cockpit-config/src/: lib.rs  test_env.rs
crates/cockpit-core/: Cargo.toml
crates/cockpit-core/src/: auto_title.rs  banner.rs  browser.rs  capabilities.rs  computer.rs  credentials.rs  diagnostics.rs  envref.rs  gitignore.rs  init.rs  jitter.rs  knowledge.rs  lib.rs  private_fs.rs  process.rs  secret_ref.rs  startup.rs  sync.rs  sysinfo.rs  tags.rs  test_env.rs  text.rs  tokens.rs  welcome.rs
crates/cockpit-db/: Cargo.toml
crates/cockpit-db/src/: lib.rs
crates/cockpit-proto/: Cargo.toml
crates/cockpit-proto/src/: event.rs  lib.rs  request.rs  response.rs
crates/cockpit-test-support/: Cargo.toml
crates/cockpit-test-support/src/: lib.rs  provider.rs
crates/cockpit-tui/: Cargo.toml
crates/cockpit-tui/docs/: keybindings.md
crates/cockpit-tui/src/: banner.rs  lib.rs
(+971 files in other folders)
