[workspace]
members = [
    "apps/cli",
    "apps/relay-rs",
    "crates/cockpit-config",
    "crates/cockpit-db",
    "crates/cockpit-proto",
    "crates/relay-protocol",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
