[workspace]
members = [
    "apps/cli",
    "apps/relay-rs",
    "crates/cockpit-config",
    "crates/cockpit-core",
    "crates/cockpit-db",
    "crates/cockpit-proto",
    "crates/cockpit-tui",
    "crates/relay-protocol",
]
resolver = "3"

# Shared dependency specs: every dependency used by two or more workspace
# members lives here exactly once; members opt in with `{ workspace = true }`
# and add member-specific `features = [...]` additively where they differ
# (e.g. tokio, reqwest). Entries whose feature sets are identical across all
# consumers carry the full spec here. Single-member dependencies stay local
# to their crate's manifest.
[workspace.dependencies]
aho-corasick = "1"
anyhow = "1"
assert_cmd = "2"
async-trait = "0.1"
base64 = "0.22"
brush-parser = "0.4"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
csv = "1"
# Scheduler cron parser evaluation (2026-07-20): croner 3.0.1 is MIT
# licensed, edition 2021 with no rust-version pin, and uses chrono-only
# calendar math with no platform-specific APIs, so it is compatible with the
# workspace MSRV 1.95.0 and Windows CI targets.
croner = "3.0.1"
dirs = "6"
dotenvy = "0.15"
firecrawl = "2"
futures = "0.3"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
jsonc-parser = { version = "0.33.0", default-features = false }
jsonschema = { version = "0.46", default-features = false }
jaq-core = "3.1.0"
jaq-json = "2.0.1"
jaq-std = "3.0.1"
keepawake = "0.6"
libc = "0.2"
lsp-types = "0.97"
monty = { git = "https://github.com/pydantic/monty.git", rev = "4cae0789864668b6b642a02c1b06d352f5a67313" }
notify = "8"
predicates = "3"
rand = "0.10"
rayon = "1"
regex = "1"
# Members add their own features (json/rustls/stream) additively; keeping the
# workspace entry featureless-with-no-defaults prevents one member's feature
# needs from silently growing another member's build.
reqwest = { version = "0.13", default-features = false }
rig = { version = "0.38", package = "rig-core", features = ["image"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
shellexpand = "3"
similar = "3"
sqlite-vec = "0.1.10-alpha.4"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.12"
# Feature sets differ per member (rt-only in cockpit-config, full runtime in
# the binaries); members declare their own features additively.
tokio = "1.52"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26.10"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
unicode-width = "0.2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
which = "8"
zbus = "5"
zerobox = "0.3"
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# Shared lint posture for every workspace member (each opts in with
# `[lints] workspace = true`). Warnings-as-errors stays enforced by the
# CI/gate flag `cargo clippy --locked --workspace -- -D warnings`
# (.github/workflows/cli-ci.yml); this table is the shared home for named
# lint-level overrides. No named overrides exist today — module-level
# `#![allow(dead_code)]` attributes in a few files are intentionally
# file-scoped and stay in source.
[workspace.lints]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
