[package]
name = "cockpit-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "AI coding harness in Rust with a codex-style TUI, multi-agent file locking, deterministic context pruning, and a meta-harness for orchestrating other coding harnesses"
license = "Apache-2.0"
repository = "https://github.com/FlyCockpit/flycockpitapp"
homepage = "https://github.com/FlyCockpit/flycockpitapp"
readme = "README.md"
keywords = ["ai", "coding", "agent", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
publish = false

# Opt this package into cargo-dist releases despite `publish = false`
# (dist skips unpublishable packages by default).
[package.metadata.dist]
dist = true

[lints]
workspace = true

[[bin]]
name = "cockpit"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.6", features = ["derive", "wrap_help", "string"] }
clap_complete = "4.6"
clap_mangen = "0.2"

# Async runtime
tokio = { workspace = true, features = [
    "rt-multi-thread", "macros", "process", "io-util", "fs",
    "net", "signal", "time", "sync",
] }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

# TUI
# Markdown parser for rendering agent (and optionally user) messages as
# styled ratatui spans. Event-driven; we walk the parser output to emit
# `Vec<Line>` directly — no HTML/ANSI intermediary. We also use the
# `html` module to convert agent markdown to HTML for the rich-text
# clipboard path.
# System clipboard for local sessions. Supports
# multi-format set (plain text + HTML) which OSC52 cannot do, so
# rich-text copy goes through arboard when not running over SSH.
# `image-data` enables `Clipboard::get_image` for composer image paste
# (composer-paste-handling); it pulls arboard's own `image` dep.
# Decode/normalize/encode pasted clipboard images to PNG before they go
# to a vision model (composer-paste-handling). PNG-only feature set keeps
# the build lean; we never decode other formats ourselves (arboard hands
# us raw RGBA, we only encode).
# Best-effort native desktop notifications for the attention subsystem on
# local sessions (zbus/D-Bus on Linux via the default `z` feature, the native
# notification centre on macOS/Windows). Fired on a detached thread with all
# errors ignored; over SSH we skip it and rely on terminal notification
# escapes instead. We only set a summary + body, so the default features are
# all we need.
# Embedded-PTY panes for `/editor` + `/lazygit`. `portable-pty`
# (wezterm's pure-Rust PTY layer) spawns + resizes
# the child; `vt100` is the terminal-screen state machine fed by the
# reader thread; `tui-term` renders a `vt100::Screen` into a ratatui
# `PseudoTerminal` widget. `tui-term` 0.3 pins `ratatui ^0.30` — a
# ratatui bump must be matched by a `tui-term` bump.
portable-pty = "0.9"

# HTTP / providers
reqwest = { workspace = true, features = ["json", "rustls", "stream"] }
# Provider layer — used as request-builder primitives, not as an agent framework.
# The crate was renamed to `rig_core` in 0.37 (was `rig` through 0.36); we
# rename it back to `rig` via the `package` key so the existing
# `use rig::…` imports keep working.
rig = { workspace = true }
tokio-tungstenite = { workspace = true }

# Storage
cockpit-core = { path = "../../crates/cockpit-core" }
cockpit-config = { path = "../../crates/cockpit-config" }
cockpit-db = { path = "../../crates/cockpit-db" }
cockpit-proto = { path = "../../crates/cockpit-proto" }
cockpit-tui = { path = "../../crates/cockpit-tui" }
# rusqlite 0.40 has no separate `fts5` feature; bundled SQLite includes FTS5
# and the knowledge sidecar tests create/query an FTS5 virtual table.
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }

# Session-log export archive writer (`cockpit export <session>` → .zip,
# session-log-export Part D). `default-features = false` + only `deflate`
# drops the aes/bzip2/zstd/xz/time extras we don't use — we write a small
# set of JSON files from in-memory bytes via `ZipWriter` + `start_file` +
# `write_all` + `finish` (API verified against zip 8.6 docs + a compile
# probe; kcl lacks the `zip` package).
zip = { workspace = true }

# Codec helpers for the NDJSON daemon wire protocol.
# `Framed<UnixStream, LinesCodec>` lifts a byte stream into a
# `Sink<String> + Stream<Item = String>` we can layer serde on top of.
tokio-util = { workspace = true }
# Language Server Protocol client payload types. cockpit hand-rolls the
# stdio JSON-RPC transport and uses this crate only for protocol structs.
lsp-types = { workspace = true }

# Serialization
flycockpit-relay-protocol = { path = "../../crates/relay-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
# YAML syntax validation for native write tools. `serde_yaml` 0.9 is archived,
# but YAML syntax is stable and this existing dependency is sufficient here.
serde_yaml = { workspace = true }
# TOML parsing for env-file format auto-detection (§7). Used to walk a
# matched env file's leaf string scalars as redaction candidates.
toml = { workspace = true }

# JSON Schema validation — drives the §12 validate-then-repair layer.
# Each tool's `parameters()` schema is compiled once and reused to
# localize a malformed tool call to the exact failing instance paths
# before the repair catalog spends any budget. `default-features =
# false` drops the optria/format-assertion + CLI extras we don't use,
# keeping the dependency surface (and the schemas we validate against,
# all hand-authored object schemas) minimal.
jsonschema = { workspace = true }

# Filesystem helpers
dirs = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
notify = { workspace = true }

# Native (no-subprocess) content search for the sandboxed `grep` tool
# (docs-agent decision 2). The ripgrep library crates run a regex search
# over an in-process file handle so the `docs` answerer never gets shell
# access: `grep-regex` builds the matcher, `grep-searcher` drives the
# line-by-line search, `grep-matcher` is the shared matcher trait the
# Sink consumes.
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }

# Shell-command classification for the command-approval subsystem
# (sandboxing part 1). A real bash-grammar AST (from the brush shell) —
# distinguishes pipelines / `&&`-`||` lists / sequences / subshells /
# simple commands and is quoting-correct, so `echo "a && b"` is one
# simple command, not a chain. Tokenize-only crates (`shlex`,
# `shell-words`) can't answer compound-vs-simple; `conch-parser` is
# unmaintained; `yash-syntax` is GPL-incompatible. We parse in `sh_mode`
# because `bash.rs` executes commands via `sh -c`.
brush-parser = { workspace = true }

# Filesystem sandboxing engine for the `bash` tool (sandboxing part 2).
# Linux/macOS/WSL only — `Sandbox::...prepare()`
# yields a `tokio::process::Command` we own (so cockpit keeps its
# process-group kill + timeout + ctrl-c cancel), confining reads to cwd +
# the per-session tmp dir while allowing PATH execution. Windows has no
# backend: the shell runs unconfined with a one-time per-session notice.
# Native cockpit tools are confined in-process (all platforms), not by
# zerobox. Linux re-entry requires `arg0::dispatch_linux_sandbox_helper`
# early in `main` + a PATH-prepend helper guard kept alive for the
# process lifetime.
zerobox = { workspace = true }

# Secret scanning / redaction
aho-corasick = { workspace = true }
dotenvy = { workspace = true }

# Tokenizer (cl100k_base) — used as the fallback counter when the
# active provider doesn't expose its own. Singleton-backed; the BPE
# vocab is built once on first call.
tiktoken-rs = { workspace = true }

# Cross-platform sleep-assertion crate for `/caffeinate` (daemon holds
# the assertion). Pure-Rust: `SetThreadExecutionState` (Windows),
# `IOPMAssertionCreateWithName` (macOS), logind `idle`/`sleep`
# inhibitor locks via blocking zbus (Linux). Default features only —
# the `bin` feature (clap/ctrlc/sysinfo) is opt-in and we never build
# its CLI. NB: keepawake's logind path inhibits `idle`+`sleep` but NOT
# `handle-lid-switch`, which `LidSwitchIgnoreInhibited=yes` (the logind
# default) causes to be ignored on lid close — so on Linux we add our
# own `handle-lid-switch` inhibitor (see `daemon::caffeinate::linux`)
# using the same zbus version to keep one zbus in the tree.
keepawake = { workspace = true }

# OAuth device-code flow (Codex login). PKCE = SHA-256 + URL-safe base64
# (no padding); `urlencoding` is just for the form-encoded body of the
# RFC 8628 token exchange step.
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

# Subprocess discovery (Windows: gitbash, on every platform: harness commands)
which = { workspace = true }

# Monty — the embedded Python sandbox VM that backs monty-mode MCP.
# Pure-Rust (ruff parser + VM), edition 2024 / MSRV 1.95;
# git dep (no crates.io publish). External-function registration +
# snapshot/resume async dispatch + resource limits (memory/time/stack)
# let the `mcp` tool run model-authored Python with zero filesystem,
# network, or env access — only the host-provided mcp.search/mcp.invoke.
monty = { workspace = true }

# Time / IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Errors / logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Misc
tempfile = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
# CSV output for `cockpit stats --format=csv`. Used only as
# a writer over an in-memory buffer; no parsing or serde-record paths.
csv = { workspace = true }
# Diff rendering for the edit/write tool entries in the TUI history
# pane (tui.diff_style). Provides line+intraline diff primitives.
similar = { workspace = true }

# Codebase-intelligence outline index. `tree-sitter` core
# parses; the grammar crates supply per-language `LANGUAGE` consts. The
# grammar versions span 0.23–0.25 but are mutually compatible: modern
# grammars depend on the tiny `tree-sitter-language` shim (the
# `LanguageFn` ABI), not on `tree-sitter` core directly, so there's a
# single core in the tree. `rayon` drives the parallel parse; the serial
# SQLite write goes through the bundled `rusqlite` connection.
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
rayon = { workspace = true }
firecrawl = { workspace = true }
# In-process JSONC syntax validation for writeunlock/editunlock data files.
jsonc-parser = { workspace = true }

# Linux-only: logind `handle-lid-switch` inhibitor lock for
# `/caffeinate` lid-close survival (the high-level inhibitor logind
# always honors, unlike the `sleep` lock keepawake takes). Blocking
# zbus matches keepawake's `zbus = "5"` so the dependency graph has a
# single zbus. Held on a dedicated thread alongside the keepawake
# assertion (see `daemon::caffeinate`).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cockpit-core = { path = "../../crates/cockpit-core", features = ["test-support"] }
predicates = { workspace = true }
tempfile = { workspace = true }
# `test-util` enables `tokio::time::{pause, advance}` for deterministic
# timer tests (e.g. the ephemeral idle watchdog) without sleeping real
# wall-clock. Dev-only: it never reaches the released binary.
tokio = { workspace = true, features = ["test-util"] }
