[package]
name = "flycockpit-relay"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
publish = false

[[bin]]
name = "flycockpit-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
futures = "0.3"
flycockpit-relay-protocol = { path = "../../crates/relay-protocol" }
jsonwebtoken = "9"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
