[package]
name = "flycockpit-relay"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[[bin]]
name = "flycockpit-relay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
base64 = { workspace = true }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
futures = { workspace = true }
flycockpit-relay-protocol = { path = "../../crates/relay-protocol" }
jsonwebtoken = "9"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
