[package]
name = "cockpit-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
cockpit-db = { path = "../cockpit-db" }
dirs = "6"
libc = "0.2"
reqwest = { version = "0.13", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
tokio = { version = "1.52", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
