[package]
name = "cockpit-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cockpit-db = { path = "../cockpit-db" }
dirs = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
