[package]
name = "cockpit-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Application layer for the Cockpit CLI"
license = "Apache-2.0"
repository = "https://github.com/FlyCockpit/flycockpitapp"
homepage = "https://github.com/FlyCockpit/flycockpitapp"
publish = false

[features]
test-support = []

[dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread", "macros", "process", "io-util", "fs",
    "net", "signal", "time", "sync",
] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
rig = { version = "0.38", package = "rig-core", features = ["image"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
cockpit-config = { path = "../cockpit-config" }
cockpit-db = { path = "../cockpit-db" }
cockpit-proto = { path = "../cockpit-proto" }
rusqlite = { version = "0.40", features = ["bundled"] }
sqlite-vec = "0.1.10-alpha.4"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
tokio-util = { version = "0.7", features = ["codec"] }
lsp-types = "0.97"
flycockpit-relay-protocol = { path = "../relay-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "1"
jsonschema = { version = "0.46", default-features = false }
dirs = "6"
shellexpand = "3"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "8"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
brush-parser = "0.4"
zerobox = "0.3"
aho-corasick = "1"
dotenvy = "0.15"
tiktoken-rs = "0.12"
keepawake = "0.6"
base64 = "0.22"
sha2 = "0.11"
rand = "0.10"
urlencoding = "2"
which = "8"
monty = { git = "https://github.com/pydantic/monty.git", rev = "4cae0789864668b6b642a02c1b06d352f5a67313" }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
uuid = { workspace = true }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tempfile = "3"
regex = "1"
unicode-width = "0.2"
csv = "1"
similar = "3"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26.10"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
rayon = "1"
firecrawl = "2"
jsonc-parser = { version = "0.33.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tokio = { version = "1.52", features = ["test-util"] }
