[package]
name = "cockpit-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Application layer for the Cockpit CLI"
license = "Apache-2.0"
repository = "https://github.com/FlyCockpit/flycockpitapp"
homepage = "https://github.com/FlyCockpit/flycockpitapp"
publish = false

[features]
test-support = []

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread", "macros", "process", "io-util", "fs",
    "net", "signal", "time", "sync",
] }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls", "stream"] }
rig = { workspace = true }
tokio-tungstenite = { workspace = true }
cockpit-config = { path = "../cockpit-config" }
cockpit-db = { path = "../cockpit-db" }
cockpit-proto = { path = "../cockpit-proto" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zip = { workspace = true }
tokio-util = { workspace = true }
lsp-types = { workspace = true }
flycockpit-relay-protocol = { path = "../relay-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
notify = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }
brush-parser = { workspace = true }
zerobox = { workspace = true }
aho-corasick = { workspace = true }
dotenvy = { workspace = true }
tiktoken-rs = { workspace = true }
keepawake = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
which = { workspace = true }
monty = { workspace = true }
chrono = { workspace = true }
croner = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
csv = { workspace = true }
similar = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
rayon = { workspace = true }
firecrawl = { workspace = true }
jsonc-parser = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cockpit-config = { path = "../cockpit-config" }
cockpit-test-support = { path = "../cockpit-test-support" }
predicates = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
