[package]
name = "cockpit-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
dirs = "6"
libc = "0.2"
rand = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
