[package]
name = "cockpit-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cockpit-test-support = { path = "../cockpit-test-support" }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
