[package]
name = "cockpit-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
cockpit-config = { path = "../cockpit-config" }
cockpit-db = { path = "../cockpit-db" }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { version = "1.52", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { workspace = true }
