[package]
name = "cockpit-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cockpit-config = { path = "../cockpit-config" }
cockpit-db = { path = "../cockpit-db" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
uuid = { workspace = true }
