[package]
name = "cockpit-test-support"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
